@@ -1,3 +1,12 @@
+2013-03-08  Alan Modra  <amodra@gmail.com>
+
+	* ehframe.h (Post_fdes) Make it a vector of Post_fde rather than
+	pointer to Post_fde.
+	(struct Post_fde): Move definition to here..
+	* ehframe.cc (struct Post_fde): ..from here.
+	(Cie::write): Don't alloc Post_fde.
+	(Eh_frame::do_sized_write): Update.  Don't free Post_fde.
+
 2013-03-07  Alan Modra  <amodra@gmail.com>
 
 	* testsuite/discard_locals_relocatable_test.c: Add a powerpc
